[tool.poetry]
name = "insta-finder"
version = "0.1.0"
description = ""
authors = ["Nick Roberson <nicholas.roberson.95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
instaloader = "*"
requests = "*"
numpy = "*"
bs4 = "*"
selenium = "*"
opencv-python = "*"
openpyxl = "*"
rich = "*"
typer = "^0.9.0"
prettytable = "^3.9.0"
webdriver-manager = "^4.0.1"
pandas = "^2.2.0"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
